finish up article with CI for Android